--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router": "^5.1.19",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/uuid": "^8.3.4"
   }
 }
