--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-router": "^5.1.19",
+    "axios": "^1.1.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
